fix blown-out grid layout on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -13,7 +13,6 @@ article h2 {
 }
 
 /* Shared */
-
 .skills div,
 .experience div,
 .education div {
@@ -41,6 +40,11 @@ article h2 {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
 }
+
+.skills div {
+  min-width: 0;
+}
+
 .skills h3 {
   font-weight: 400;
   font-style: italic;
